--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "d3": "^3.5.6",
     "d3-state-handler": "^0.3.1",
     "jquery": "^2.1.4",
+    "lodash": "^3.10.1",
     "requirejs": "^2.1.20"
   }
 }
